<resources>
    <string name="app_name">Trabalho Java AJL</string>
    <string name="Calculadora">Factorial</string>
    <string name="lbNumero">Numero</string>
    <string name="tfResultado">Resultado</string>
    <string name="tfNumero">0</string>
    <string name="tfRes">0</string>
    <string name="btCalcular">Calcular</string>
    <string name="btFibonacci">Fibonacci</string>
    <string name="CalcFact">CALCULADORA DE FACTORIAL</string>
    <string name="CalcFib">Calculadora Fibonacci</string>
    <string name="lbIndice">Índice</string>
    <string name="tfIndice">1</string>
    <string name="lbElemento">Elemento</string>
    <string name="tfResultadoFib">1</string>
    <string name="lbMDC">Calculadora de MDC</string>
    <string name="lbValor1">Valor 1</string>
    <string name="lbValor2">Valor 2</string>
    <string name="lbResultMDC">1</string>
    <string name="btMDC">MDC</string>
    <string name="btCalculadora">Calculadora</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="bt0">0</string>
    <string name="btSoma">+</string>
    <string name="btSub">-</string>
    <string name="btIgual">=</string>
    <string name="btDiv">/</string>
    <string name="btMult">X</string>
    <string name="sobre">Sobre</string>
</resources>
